html + css + script

--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
   
   <body>
     <!-- inicio nav -->
-
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top barranabegacion">
-      <div class="container">
+  <nav class="navbar navbar-expand-lg  navbar-dark fixed-top barranabegacion ">
+      <div class="container barranabegacion">
         <a class="navbar-brand" href="#">
           <img 
           src="assets/img/viajes.svg" 
@@ -57,7 +56,7 @@
               <a class="nav-link" href="#inicio">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#somos">Quienes somos</a>
+              <a class="nav-link" href="#quienesomos">Quienes somos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#destacados">Destacados</a>
@@ -83,71 +82,83 @@
             <img src="assets/img/carousel3.jpg" class="d-block w-100" alt="carousel3">
           </div>
         </div>
-       <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+       <button 
+       class="carousel-control-prev" 
+       type="button" 
+       data-target="#carouselExampleControls" 
+       data-slide="prev">
+          <span 
+          class="carousel-control-prev-icon" 
+          aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <button 
+        class="carousel-control-next" 
+        type="button" 
+        data-target="#carouselExampleControls" 
+        data-slide="next">
+          <span 
+          class="carousel-control-next-icon" 
+          aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </button>
       </div>
     </header>
-<!-- seccion quienes somos -->
-    <section id="somos" class="container my-5">
-      <h3 class="display-5 font-weight-bold my-4 text-center">¿Quienes somos?</h3>
+<!-- seccion quienes somos display-5 font-weight-bold my-4 text-light text-center   container my-5 -->
+    <section id="quienesomos" class="">
+      <h3 class="text-center">¿Quienes somos?</h3>
       <hr class="linecenter">
-      <div class="row ">
-        <div class="col-md-4">
-          <h6 class="text-center"><i class="fas fa-plane fa-3x my-3"></i></h6> 
-          <p class="my-3 text-left">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam 
-            quam recusandae voluptas repellendus voluptatibus sapiente accusamus 
-            adipisci facilis natus. Nisi nam enim, quia deleniti quo magnam 
-            reprehenderit asperiores porro voluptatem. Quia, praesentium optio 
-            itaque ab consequuntur magni sequi molestias aut necessitatibus tempore 
-            quasi veniam non eligendi minus fugit et ducimus illum mollitia eveniet
-             pariatur. Architecto, magnam mollitia? Veniam dolorum impedit magnam 
-             possimus perspiciatis inventore atque quo, iste commodi velit nulla 
-             modi ipsum laudantium non accusantium praesentium vero, quam obcaecati 
-             in! ipsum dolor sit amet, consectetur adipisi. 
-          </p>
+      <div class="card-group">
+        <div class="card">
+         <div class="card-body">
+            <h5 class="card-title"><i class="fas fa-plane fa-3x my-3"></i></h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam 
+              quam recusandae voluptas repellendus voluptatibus sapiente accusamus 
+              adipisci facilis natus. Nisi nam enim, quia deleniti quo magnam 
+              reprehenderit asperiores porro voluptatem. Quia, praesentium optio 
+              itaque ab consequuntur magni sequi molestias aut necessitatibus tempore 
+              quasi veniam non eligendi minus fugit et ducimus illum mollitia eveniet
+               pariatur. Architecto, magnam mollitia? Veniam dolorum impedit magnam 
+               possimus perspiciatis inventore atque quo, iste commodi velit nulla 
+               modi ipsum laudantium non accusantium praesentium vero, quam obcaecati 
+               in! ipsum dolor sit amet, consectetur adipisi. </p>
+          </div>
         </div>
-        <div class="col-md-4">
-          
-          <p class="my-3 text-left">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias labore 
-            um optio consequuntur a nam deleniti magni quis distinctio perferendis, 
-            dolore sint sunt iusto quo earum, molestiae fugiat ea, obcaecati eos 
-            hic minima fugit? Veritatis reiciendis exercitationem, illo corporis 
-            placeat expedita quo numquam adipisci deleniti quis esse dolorum aut 
-            explicabo ratione nihil autem aperiam eaque, excepturi officiis perferendis 
-            velit? ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-          <h6 class="text-center"><i class="fas fa-mountain fa-3x my-3"></i></h6>
+        <div class="card">
+          <div class="card-body">
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam 
+              quam recusandae voluptas repellendus voluptatibus sapiente accusamus 
+              adipisci facilis natus. Nisi nam enim, quia deleniti quo magnam 
+              reprehenderit asperiores porro voluptatem. Quia, praesentium optio 
+              itaque ab consequuntur magni sequi molestias aut necessitatibus tempore 
+              quasi veniam non eligendi minus fugit et ducimus illum mollitia eveniet
+               pariatur. Architecto, magnam mollitia? Veniam dolorum impedit magnam 
+               possimus perspiciatis inventore atque quo, iste commodi velit nulla 
+               modi ipsum laudantium non accusantium praesentium vero, quam obcaecati 
+               in! ipsum dolor sit amet, consectetur adipisi. </p>
+               <h5 class="card-title"><i class="fas fa-mountain fa-3x my-3"></i></h5>
+              </div>
         </div>
-        <div class="col-md-4">
-          <h6 class="text-center"><i class="fas fa-route fa-3x my-3"></i></h6>
-          <p class="my-3 text-left">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. In necessitatibus 
-            doloribus ad cum asperiores voluptatum vero magni pariatur saepe! Veritatis 
-            magnam nulla aliquid voluptatum amet sint facere id! Placeat, consequatur 
-            aliquid ducimus magni illum dolore architecto modi delectus alias molestiae
-             nemo adipisci maxime nulla quas quos facilis quia dolorem exercitationem! 
-             Iure, rerum reprehenderit. Accusamus quam, sint nisi rem id eius ut a enim 
-             ratione earum repudiandae totam reprehenderit repellendus laborum? ipsum 
-             dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title"><i class="fas fa-route fa-3x my-3"></i></h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam 
+              quam recusandae voluptas repellendus voluptatibus sapiente accusamus 
+              adipisci facilis natus. Nisi nam enim, quia deleniti quo magnam 
+              reprehenderit asperiores porro voluptatem. Quia, praesentium optio 
+              itaque ab consequuntur magni sequi molestias aut necessitatibus tempore 
+              quasi veniam non eligendi minus fugit et ducimus illum mollitia eveniet
+               pariatur. Architecto, magnam mollitia? Veniam dolorum impedit magnam 
+               possimus perspiciatis inventore atque quo, iste commodi velit nulla 
+               modi ipsum laudantium non accusantium praesentium vero, quam obcaecati 
+               in! ipsum dolor sit amet, consectetur adipisi. </p>
+          </div>
         </div>
       </div>
-    </section>
+</section>
 <!-- seccion destacados  -->
     <section class="container-fluid my-5 p-5 bg-dark" id="destacados">
-      <h2 class="display-5 text-center font-weight-bold text-light mb-3">
+      <h2 class="display-5 text-center font-weight-bold mb-3">
        Destacados
       </h2>
       <hr class="linecenter">
