--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8" />
     <title>Viajes Chile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--CSS de Bootstrap 4.2.1-->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-      crossorigin="anonymous"
-    />
+    <!--CSS de Bootstrap 4.6.1-->
+    <link rel="stylesheet" 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" 
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" 
+    crossorigin="anonymous">
+
     <!--Google Fonts-->
     <link
       href="https://fonts.googleapis.com/css?family=Raleway:400,700"
@@ -26,16 +25,17 @@
     <!--Mi estilo-->
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-  
+
   <body>
     <!-- inicio nav -->
-  <nav class="navbar navbar-expand-lg  navbar-dark fixed-top barranabegacion ">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top barranabegacion">
       <div class="container barranabegacion">
         <a class="navbar-brand" href="#">
-          <img 
-          src="assets/img/viajes.svg" 
-          alt="Logo viajeschile" 
-          class="imaglogo"/>Viajes Chile
+          <img
+            src="assets/img/viajes.svg"
+            alt="Logo viajeschile"
+            class="imaglogo"
+          />Viajes Chile
         </a>
 
         <button
@@ -67,149 +67,208 @@
           </ul>
         </div>
       </div>
-    </nav>                                                                  
+    </nav>
 
-    <header id="iniciocarrusel">
-      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <header id="inicio">
+      <div
+        id="carouselExampleControls"
+        class="carousel slide"
+        data-ride="carousel"
+      >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="assets/img/carousel1.jpg" class="d-block w-100" alt="carousel1">
+            <img
+              src="assets/img/carousel1.jpg"
+              class="d-block w-100"
+              alt="carousel1"
+            />
           </div>
           <div class="carousel-item">
-            <img src="assets/img/carousel2.jpg" class="d-block w-100" alt="carousel2">
+            <img
+              src="assets/img/carousel2.jpg"
+              class="d-block w-100"
+              alt="carousel2"
+            />
           </div>
           <div class="carousel-item">
-            <img src="assets/img/carousel3.jpg" class="d-block w-100" alt="carousel3">
+            <img
+              src="assets/img/carousel3.jpg"
+              class="d-block w-100"
+              alt="carousel3"
+            />
           </div>
         </div>
-       <button 
-       class="carousel-control-prev" 
-       type="button" 
-       data-target="#carouselExampleControls" 
-       data-slide="prev">
-          <span 
-          class="carousel-control-prev-icon" 
-          aria-hidden="true"></span>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-target="#carouselExampleControls"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </button>
-        <button 
-        class="carousel-control-next" 
-        type="button" 
-        data-target="#carouselExampleControls" 
-        data-slide="next">
-          <span 
-          class="carousel-control-next-icon" 
-          aria-hidden="true"></span>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-target="#carouselExampleControls"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </button>
       </div>
     </header>
-<!-- seccion quienes somos display-5 font-weight-bold my-4 text-light text-center   container my-5 -->
-    <section id="quienesomos" class="">
+    <!-- seccion quienes somos -->
+    <section id="quienesomos">
       <h3 class="text-center">¿Quienes somos?</h3>
-      <hr class="linecenter">
+      <hr class="linecenter" />
       <div class="card-group">
         <div class="card">
-         <div class="card-body">
-            <h5 class="card-title"><i class="fas fa-plane fa-3x my-3"></i></h5>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam 
-              quam recusandae voluptas repellendus voluptatibus sapiente accusamus 
-              adipisci facilis natus. Nisi nam enim, quia deleniti quo magnam 
-              reprehenderit asperiores porro voluptatem. Quia, praesentium optio 
-              itaque ab consequuntur magni sequi molestias aut necessitatibus tempore 
-              quasi veniam non eligendi minus fugit et ducimus illum mollitia eveniet
-               pariatur. Architecto, magnam mollitia? Veniam dolorum impedit magnam 
-               possimus perspiciatis inventore atque quo, iste commodi velit nulla 
-               modi ipsum laudantium non accusantium praesentium vero, quam obcaecati 
-               in! ipsum dolor sit amet, consectetur adipisi. </p>
+          <div class="card-body">
+            <h5 class="card-title cardicons">
+              <i class="fas fa-plane fa-3x my-3"></i>
+            </h5>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam
+              quam recusandae voluptas repellendus voluptatibus sapiente
+              accusamus adipisci facilis natus. Nisi nam enim, quia deleniti quo
+              magnam reprehenderit asperiores porro voluptatem. Quia,
+              praesentium optio itaque ab consequuntur magni sequi molestias aut
+              necessitatibus tempore quasi veniam non eligendi minus fugit et
+              ducimus illum mollitia eveniet pariatur. Architecto, magnam
+              mollitia? Veniam dolorum impedit magnam possimus perspiciatis
+              inventore atque quo, iste commodi velit nulla modi ipsum
+              laudantium non accusantium praesentium vero, quam obcaecati in!
+              ipsum dolor sit amet, consectetur adipisi.
+            </p>
           </div>
         </div>
         <div class="card">
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam 
-              quam recusandae voluptas repellendus voluptatibus sapiente accusamus 
-              adipisci facilis natus. Nisi nam enim, quia deleniti quo magnam 
-              reprehenderit asperiores porro voluptatem. Quia, praesentium optio 
-              itaque ab consequuntur magni sequi molestias aut necessitatibus tempore 
-              quasi veniam non eligendi minus fugit et ducimus illum mollitia eveniet
-               pariatur. Architecto, magnam mollitia? Veniam dolorum impedit magnam 
-               possimus perspiciatis inventore atque quo, iste commodi velit nulla 
-               modi ipsum laudantium non accusantium praesentium vero, quam obcaecati 
-               in! ipsum dolor sit amet, consectetur adipisi. </p>
-               <h5 class="card-title"><i class="fas fa-mountain fa-3x my-3"></i></h5>
-              </div>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam
+              quam recusandae voluptas repellendus voluptatibus sapiente
+              accusamus adipisci facilis natus. Nisi nam enim, quia deleniti quo
+              magnam reprehenderit asperiores porro voluptatem. Quia,
+              praesentium optio itaque ab consequuntur magni sequi molestias aut
+              necessitatibus tempore quasi veniam non eligendi minus fugit et
+              ducimus illum mollitia eveniet pariatur. Architecto, magnam
+              mollitia? Veniam dolorum impedit magnam possimus perspiciatis
+              inventore atque quo, iste commodi velit nulla modi ipsum
+              laudantium non accusantium praesentium vero, quam obcaecati in!
+              ipsum dolor sit amet, consectetur adipisi.
+            </p>
+            <h5 class="card-title cardicons">
+              <i class="fas fa-mountain fa-3x my-3"></i>
+            </h5>
+          </div>
         </div>
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title"><i class="fas fa-route fa-3x my-3"></i></h5>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam 
-              quam recusandae voluptas repellendus voluptatibus sapiente accusamus 
-              adipisci facilis natus. Nisi nam enim, quia deleniti quo magnam 
-              reprehenderit asperiores porro voluptatem. Quia, praesentium optio 
-              itaque ab consequuntur magni sequi molestias aut necessitatibus tempore 
-              quasi veniam non eligendi minus fugit et ducimus illum mollitia eveniet
-               pariatur. Architecto, magnam mollitia? Veniam dolorum impedit magnam 
-               possimus perspiciatis inventore atque quo, iste commodi velit nulla 
-               modi ipsum laudantium non accusantium praesentium vero, quam obcaecati 
-               in! ipsum dolor sit amet, consectetur adipisi. </p>
+            <h5 class="card-title cardicons">
+              <i class="fas fa-route fa-3x my-3"></i>
+            </h5>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam
+              quam recusandae voluptas repellendus voluptatibus sapiente
+              accusamus adipisci facilis natus. Nisi nam enim, quia deleniti quo
+              magnam reprehenderit asperiores porro voluptatem. Quia,
+              praesentium optio itaque ab consequuntur magni sequi molestias aut
+              necessitatibus tempore quasi veniam non eligendi minus fugit et
+              ducimus illum mollitia eveniet pariatur. Architecto, magnam
+              mollitia? Veniam dolorum impedit magnam possimus perspiciatis
+              inventore atque quo, iste commodi velit nulla modi ipsum
+              laudantium non accusantium praesentium vero, quam obcaecati in!
+              ipsum dolor sit amet, consectetur adipisi.
+            </p>
           </div>
         </div>
       </div>
-</section>
-<!-- seccion destacados  -->
-    <section class="container-fluid my-5 p-5 bg-dark" id="destacados">
-      <h2 class="display-5 text-center font-weight-bold mb-3">
-       Destacados
+    </section>
+    <!-- seccion destacados  -->
+    <section class="container-fluid p-5" id="destacados">
+      <h2 class="display-5 text-center font-weight-bold text-light mb-3">
+        Destacados
       </h2>
-      <hr class="linecenter">
-      <div class="row row-cols-1 row-cols-md-3">
+      <hr class="linecenter" />
+      <div class="row row-cols-1 row-cols-md-3 anchotargetas">
         <div class="col mb-4 h-100">
-          <div class="card">
-            <img src="assets/img/card1.jpg" class="card-img-top" alt="card1">
+          <div class="card fondocardestacado h-100">
+            <img src="assets/img/card1.jpg" class="card-img-top" alt="card1" />
             <div class="card-body">
               <h5 class="card-title">Lorem ipsum dolor sit amet consectetur</h5>
-              <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex omnis nostrum sint et natus ratione possimus deserunt explicabo mollitia sed?</p>
+              <p class="card-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex
+                omnis nostrum sint et natus ratione possimus deserunt explicabo
+                mollitia sed?
+              </p>
             </div>
           </div>
         </div>
         <div class="col mb-4 h-100">
-          <div class="card">
-            <img src="assets/img/card2.jpg" class="card-img-top" alt="card2">
+          <div class="card fondocardestacado h-100">
+            <img
+              src="assets/img/card2.jpg"
+              class="card-img-top"
+              alt="card2"
+            />
             <div class="card-body">
-              <h5 class="card-title">Lorem ipsum dolor sit amet adipisicing.</h5>
-              <p class="card-text">Lorem dolor icing elit. Quibusdam natus sed provident dolore libero recusandae consequuntur aliquid fuga non eaque?</p>
+              <h5 class="card-title">
+                Lorem ipsum dolor sit amet adipisicing.
+              </h5>
+              <p class="card-text">
+                Lorem dolor icing elit. ntud formus terrum Quibusdam natus sed
+                provident dolore libero recusandae consequuntur aliquid fuga?
+              </p>
             </div>
           </div>
         </div>
         <div class="col mb-4 h-100">
-          <div class="card">
-            <img src="assets/img/card3.jpg" class="card-img-top" alt="card3">
+          <div class="card fondocardestacado h-100">
+            <img src="assets/img/card3.jpg" class="card-img-top" alt="card3" />
             <div class="card-body">
-              <h5 class="card-title">Lorem ipsum dolor sit amet consectetur.</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium veniam asperiores labore et beatae, deleniti a odit quas?</p>
+              <h5 class="card-title">
+                Lorem ipsum dolor sit amet consectetur.
+              </h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Praesentium veniam asperiores labore et beatae, deleniti a odit
+                quas?
+              </p>
             </div>
           </div>
         </div>
-        <div class="col mb-4 h-100">
-          <div class="card">
-            <img src="assets/img/card4.jpg" class="card-img-top" alt="card4">
+        <div class="col mb-4">
+          <div class="card fondocardestacado h-100">
+            <img src="assets/img/card4.jpg" class="card-img-top" alt="card4" />
             <div class="card-body">
               <h5 class="card-title">Lorem ipsum dolor sit amet.</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, aut quisquam ducimus doloribus quibusdam reprehenderit tempora.</p>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos,
+                aut quisquam ducimus doloribus quibusdam reprehenderit tempora.
+              </p>
             </div>
           </div>
         </div>
       </div>
-</section>
-<!-- seccion contacto  -->
-<section id="contacto" class="container my-5">
+    </section>
+    <!-- seccion contacto  -->
+    <section id="contacto" class="container my-5">
       <h2 class="display-3 font-weight-bold text-center my-4">Contacto</h2>
-     <hr class="linecenter">
-</section>
-<!-- seccion footer  -->
-    <footer class="bg-secondary text-left text-light p-3">
-      <h4>VIAJES CHILE </h4>
-      <div><i class="fas fa-headphones"></i>
+      <hr class="linecenter" />
+
+      <div
+        data-tf-widget="LFzZC8dZ"
+        data-tf-iframe-props="title=My typeform"
+        style="width: 100%; height: 400px"
+      ></div>
+      <script src="//embed.typeform.com/next/embed.js"></script>
+    </section>
+    <!-- seccion footer  -->
+    <footer class="piepagina text-left text-light p-3">
+      <h4>VIAJES CHILE</h4>
+      <div>
+        <i class="fas fa-headphones"></i>
         <i class="fab fa-linkedin-in"></i>
         <i class="fab fa-twitter-square"></i>
         <i class="fab fa-facebook-square"></i>
@@ -218,9 +277,10 @@
 
     <!--jQuery 3.6.0 minimisado-->
     <script
-  src="https://code.jquery.com/jquery-3.6.0.min.js"
-  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-  crossorigin="anonymous"></script>
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
 
     <!--Popper JS 1.14.3-->
     <script
@@ -229,12 +289,10 @@
       crossorigin="anonymous"
     ></script>
 
-    <!--Bootstrap JS 4.2.1-->
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-      crossorigin="anonymous"
-    ></script>
+    <!--Bootstrap JS 4.6.1-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" 
+    integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" 
+    crossorigin="anonymous"></script>
 
     <!--Mi script-->
     <script src="assets/js/script.js"></script>
