ultima actualizacion sin revision

--- a/index.html
+++ b/index.html
@@ -127,7 +127,14 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title cardicons">
-              <i class="fas fa-plane fa-3x my-3"></i>
+              <button 
+              type="button" 
+              class="btn" 
+              data-toggle="tooltip" 
+              data-placement="top" 
+              title="Agencia de viajesChile">
+                 <i class="fas fa-plane fa-3x my-3"></i>
+              </button>
             </h5>
             <p class="card-text">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam
@@ -160,14 +167,29 @@
               ipsum dolor sit amet, consectetur adipisi.
             </p>
             <h5 class="card-title cardicons">
-              <i class="fas fa-mountain fa-3x my-3"></i>
+              <button 
+              type="button" 
+              class="btn" 
+              data-toggle="tooltip" 
+              data-placement="top" 
+              title="Los mejores atractivos turísticos">
+                 <i class="fas fa-mountain fa-3x my-3"></i>
+              </button>
             </h5>
           </div>
         </div>
         <div class="card">
           <div class="card-body">
             <h5 class="card-title cardicons">
-              <i class="fas fa-route fa-3x my-3"></i>
+              <button 
+              type="button" 
+              class="btn" 
+              data-toggle="tooltip" 
+              data-placement="top" 
+              title="Asistencia en ruta">
+                 <i class="fas fa-route fa-3x my-3"></i>
+              </button>
+                          
             </h5>
             <p class="card-text">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam
@@ -255,27 +277,22 @@
       </div>
     </section>
     <!-- seccion contacto  -->
-    <section id="contacto" class="">
-      <h2 class="display-3 font-weight-bold text-center">Contacto</h2>
+    <section id="contacto">
+      <h2 class="display-5 font-weight-bold  text-white text-center">Contacto</h2>
       <hr class="linecenter" />
-      <div class="graciascontactarnos" >
-        <h5>Hola, gracias por contactarnos</h5>
-        <button type="button" class="btn btn-primary text-center ">
-  <a href="https://form.typeform.com/to/vPsGLvoF?typeform-medium=embed-snippet
-  " class="text-white"> Presiona para comensar</a> 
-</button>
-</div>
-
-      
+      <div class="jumbotron">
+        <h2 class="display-5 text-center pb-5 pt-5">Hola, gracias por contactarnos</h2>
+        <a class="btn btn-primary btn-lg pb-3" target="_blank" href="https://form.typeform.com/to/vPsGLvoF?typeform-medium=embed-snippet" role="button">Presiona para comensar</a>
+      </div>     
     </section>
     <!-- seccion footer  -->
-    <footer class="piepagina text-left text-light p-3">
+    <footer class="piepagina text-left text-white p-3">
       <h4>VIAJES CHILE</h4>
       <div>
-        <a class="pieiconos" href="https://accounts.spotify.com/es-ES/login/?continue=https:%2F%2Fwww.spotify.com%2Fcl%2Fpremium%2F&_locale=es-CL"  target="_blank"><i class="fas fa-headphones"></i></a>
-        <a  class="pieiconos" href="https://www.linkedin.com/login/cl" target="_blank"><i class="fab fa-linkedin-in pieiconos"></i></a>
-        <a class="pieiconos"   href="https://twitter.com/?lang=cl"  target="_blank"><i class="fab fa-twitter-square"></i></a>
-        <a class="pieiconos" href="https://web.facebook.com/login/?privacy_mutation_token=eyJ0eXBlIjowLCJjcmVhdGlvbl90aW1lIjoxNjQwNzk2MDMxLCJjYWxsc2l0ZV9pZCI6MjY5NTQ4NDUzMDcyMDk1MX0%3D"  target="_blank"><i class="fab fa-facebook-square"></i></a>
+        <a class=" text-white" href="https://accounts.spotify.com/es-ES/login/?continue=https:%2F%2Fwww.spotify.com%2Fcl%2Fpremium%2F&_locale=es-CL"  target="_blank"><i class="fas fa-headphones"></i></a>
+        <a class=" text-white" href="https://www.linkedin.com/login/cl" target="_blank"><i class="fab fa-linkedin-in pieiconos"></i></a>
+        <a class=" text-white" href="https://twitter.com/?lang=cl"  target="_blank"><i class="fab fa-twitter-square"></i></a>
+        <a class=" text-white" href="https://web.facebook.com/login/?privacy_mutation_token=eyJ0eXBlIjowLCJjcmVhdGlvbl90aW1lIjoxNjQwNzk2MDMxLCJjYWxsc2l0ZV9pZCI6MjY5NTQ4NDUzMDcyMDk1MX0%3D"  target="_blank"><i class="fab fa-facebook-square"></i></a>
       </div>
     </footer>
 
