--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="assets/img/viajes.svg">
+    <link rel="icon" href="assets/img/viajes.svg" />
     <title>Viajes Chile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--CSS de Bootstrap 4.6.1-->
-    <link rel="stylesheet" 
-    href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" 
-    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" 
-    crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
+      crossorigin="anonymous"
+    />
 
     <!--Google Fonts-->
     <link
@@ -127,13 +129,14 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title cardicons">
-              <button 
-              type="button" 
-              class="btn" 
-              data-toggle="tooltip" 
-              data-placement="top" 
-              title="Agencia de viajesChile">
-                 <i class="fas fa-plane fa-3x my-3"></i>
+              <button
+                type="button"
+                class="btn"
+                data-toggle="tooltip"
+                data-placement="top"
+                title="Agencia de viajesChile"
+              >
+                <i class="fas fa-plane fa-3x my-3"></i>
               </button>
             </h5>
             <p class="card-text">
@@ -167,13 +170,14 @@
               ipsum dolor sit amet, consectetur adipisi.
             </p>
             <h5 class="card-title cardicons">
-              <button 
-              type="button" 
-              class="btn" 
-              data-toggle="tooltip" 
-              data-placement="top" 
-              title="Los mejores atractivos turísticos">
-                 <i class="fas fa-mountain fa-3x my-3"></i>
+              <button
+                type="button"
+                class="btn"
+                data-toggle="tooltip"
+                data-placement="top"
+                title="Los mejores atractivos turísticos"
+              >
+                <i class="fas fa-mountain fa-3x my-3"></i>
               </button>
             </h5>
           </div>
@@ -181,15 +185,15 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title cardicons">
-              <button 
-              type="button" 
-              class="btn" 
-              data-toggle="tooltip" 
-              data-placement="top" 
-              title="Asistencia en ruta">
-                 <i class="fas fa-route fa-3x my-3"></i>
+              <button
+                type="button"
+                class="btn"
+                data-toggle="tooltip"
+                data-placement="top"
+                title="Asistencia en ruta"
+              >
+                <i class="fas fa-route fa-3x my-3"></i>
               </button>
-                          
             </h5>
             <p class="card-text">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam
@@ -247,7 +251,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-6 col-lg-3 ">
+        <div class="col-12 col-md-6 col-lg-3">
           <div class="card fondocardestacado h-100">
             <img src="assets/img/card3.jpg" class="card-img-top" alt="card3" />
             <div class="card-body">
@@ -278,21 +282,51 @@
     </section>
     <!-- seccion contacto  -->
     <section id="contacto">
-      <h2 class="display-5 font-weight-bold  text-white text-center">Contacto</h2>
+      <h2 class="display-5 font-weight-bold text-white text-center">
+        Contacto
+      </h2>
       <hr class="linecenter" />
       <div class="jumbotron">
-        <h2 class="display-5 text-center pb-5 pt-5">Hola, gracias por contactarnos</h2>
-        <a class="btn btn-primary btn-lg pb-3" target="_blank" href="https://form.typeform.com/to/vPsGLvoF?typeform-medium=embed-snippet" role="button">Presiona para comensar</a>
-      </div>     
+        <h2 class="display-5 text-center pb-5 pt-5">
+          Hola, gracias por contactarnos
+        </h2>
+        <a
+          class="btn btn-primary btn-lg pb-3"
+          target="_blank"
+          href="https://form.typeform.com/to/vPsGLvoF?typeform-medium=embed-snippet"
+          role="button"
+          >Presiona para comensar</a
+        >
+      </div>
     </section>
     <!-- seccion footer  -->
     <footer class="piepagina text-left text-white p-3">
       <h4>VIAJES CHILE</h4>
       <div>
-        <a class=" text-white" href="https://accounts.spotify.com/es-ES/login/?continue=https:%2F%2Fwww.spotify.com%2Fcl%2Fpremium%2F&_locale=es-CL"  target="_blank"><i class="fas fa-headphones"></i></a>
-        <a class=" text-white" href="https://www.linkedin.com/login/cl" target="_blank"><i class="fab fa-linkedin-in pieiconos"></i></a>
-        <a class=" text-white" href="https://twitter.com/?lang=cl"  target="_blank"><i class="fab fa-twitter-square"></i></a>
-        <a class=" text-white" href="https://web.facebook.com/login/?privacy_mutation_token=eyJ0eXBlIjowLCJjcmVhdGlvbl90aW1lIjoxNjQwNzk2MDMxLCJjYWxsc2l0ZV9pZCI6MjY5NTQ4NDUzMDcyMDk1MX0%3D"  target="_blank"><i class="fab fa-facebook-square"></i></a>
+        <a
+          class="text-white"
+          href="https://accounts.spotify.com/es-ES/login/?continue=https:%2F%2Fwww.spotify.com%2Fcl%2Fpremium%2F&_locale=es-CL"
+          target="_blank"
+          ><i class="fas fa-headphones"></i
+        ></a>
+        <a
+          class="text-white"
+          href="https://www.linkedin.com/login/cl"
+          target="_blank"
+          ><i class="fab fa-linkedin-in pieiconos"></i
+        ></a>
+        <a
+          class="text-white"
+          href="https://twitter.com/?lang=cl"
+          target="_blank"
+          ><i class="fab fa-twitter-square"></i
+        ></a>
+        <a
+          class="text-white"
+          href="https://web.facebook.com/login/?privacy_mutation_token=eyJ0eXBlIjowLCJjcmVhdGlvbl90aW1lIjoxNjQwNzk2MDMxLCJjYWxsc2l0ZV9pZCI6MjY5NTQ4NDUzMDcyMDk1MX0%3D"
+          target="_blank"
+          ><i class="fab fa-facebook-square"></i
+        ></a>
       </div>
     </footer>
 
@@ -311,9 +345,11 @@
     ></script>
 
     <!--Bootstrap JS 4.6.1-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" 
-    integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" 
-    crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+      integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
+      crossorigin="anonymous"
+    ></script>
 
     <!--Mi script-->
     <script src="assets/js/script.js"></script>
